# medibot_ws

./: README.md
Notes/: # DOCKER setup.txt  #Medibot nav2 command.txt  FYP _ CURRENT PROJECT PROGRESS (fyp.txt  Ros2 install.txt  arduino-cli_setup.txt  command that need to always re-do.txt  late.rviz  urdf.rviz
src/arduino/main/: main_cgpt.ino
src/medibot/medibot/medibot/: CMakeLists.txt  package.xml
src/medibot/medibot/medibot_bringup/: CMakeLists.txt  package.xml
src/medibot/medibot/medibot_bringup/launch/: medibot_state_publisher.launch.py  realsense_camera.launch.py  robot.launch.py  rviz2.launch.py
src/medibot/medibot/medibot_cartographer/: CMakeLists.txt  package.xml
src/medibot/medibot/medibot_description/: CMakeLists.txt  package.xml
src/medibot/medibot/medibot_example/: package.xml  setup.cfg  setup.py
src/medibot/medibot/medibot_navigation2/: CMakeLists.txt  package.xml
src/medibot/medibot/medibot_node/: CMakeLists.txt  package.xml
src/medibot/medibot/medibot_teleop/: package.xml  setup.cfg  setup.py
src/medibot/medibot_msgs/: CMakeLists.txt  package.xml
src/medibot/medibot_simulations/medibot_fake_node/: CMakeLists.txt  package.xml
src/medibot/medibot_simulations/medibot_gazebo/: CMakeLists.txt  package.xml
src/medibot/medibot_simulations/medibot_simulations/: CMakeLists.txt  package.xml
src/medibot_autonomy/: CMakeLists.txt  README.md  package.xml
src/medibot_autonomy/launch/: autonomy.launch.py
src/medibot_autonomy/src/: autonomy_node.cpp
src/medibot_sim/: package.xml  setup.cfg  setup.py
src/medibot_sim/launch/: medibot_world.launch.py  nav2.launch.py
(+114 files in other folders)
