<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>medibot</name>
  <version>2.1.5</version>
  <description>
    ROS 2 packages for Medibot
  </description>
  <maintainer email="ilhamnuramir@gmail.com">Ilham</maintainer>
  <license>Apache 2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>medibot_bringup</exec_depend>
  <exec_depend>medibot_cartographer</exec_depend>
  <exec_depend>medibot_description</exec_depend>
  <exec_depend>medibot_example</exec_depend>
  <exec_depend>medibot_navigation2</exec_depend>
  <exec_depend>medibot_node</exec_depend>
  <exec_depend>medibot_teleop</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
