<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>medibot_simulations</name>
  <version>2.2.6</version>
  <description>
    ROS 2 packages for Medibot simulations
  </description>
 <maintainer email="ilhamnuramir@gmail.com">Ilham</maintainer>
  <license>Apache 2.0</license>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>medibot_fake_node</exec_depend>
  <exec_depend>medibot_gazebo</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
